Feature added for users to choose player.
Images can now be chosen form players on the front end. Logic had to be created in the
image file to allow unit tests to pass, when there is no css to select from. Code does
need to be refactored.

The next step is to have a starting screen, so the user can select a player before the game starts.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
 
     <div class='row'>
       <div class="col-md-6 col-md-offset-3">
+        <select class='form-control' id='player'>
+          <option value="">CHOOSE YOUR FAVORITE 1507 STUDENT!</option>
+          <option value="alon">Alon</option>
+          <option value="bret">Bret</option>
+          <option value="chris">Chris</option>
+          <option value="george">George</option>
+          <option value="hecker">Matt H.</option>
+          <option value="holzmann">Justin</option>
+          <option value="jeff">Jeff</option>
+          <option value="matt">Matt E.</option>
+          <option value="mb">M.B.</option>
+          <option value="mimi">Mimi</option>
+          <option value="rose">Rose</option>
+          <option value="russell">Russell</option>
+          <option value="ryan">Ryan</option>
+          <option value="travis">Travis</option>
+        </select>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class="col-md-6 col-md-offset-3">
         <canvas id="screen" width="450" height="400" style="border:3px solid #777;"></canvas>
       </div>
     </div>
