--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h2 id="title">Assessment Time!</h2>
+      <h2 id="title">1507 Assessment Time!</h2>
       <h4 id="objective">Staff is coming to assess you! Use your Ruby Gems to show your skills!</h4>
       <h6 id="controls">Controls: MOVE with left and right arrows, FIRE Ruby Gems by holding spacebar</h6>
       <h6 id="tip">Tip: Smaller assessments are worth more points. As you accumulate points you will move through levels and the game will get harder!</h6>
