Added highscore and added custom formatting.
Added highScore function to score.js file. This calculates the player's highscore using browser cookies.
In addition, added new high score column to index.html file to display high score. Some custom css was added
to format the high score and html font was changed for text in start and gameover screens to papyrus.

The next step will be to update the add player images in drop down.

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
             <td>Level</td>
             <td>Time</td>
             <td>Assessments Conquered</td>
-            <td>Score</td>
+            <td>Current Score</td>
+            <td>High Score</td>
           </tr>
           <tr>
             <td id="level"></td>
             <td id="time"></td>
             <td id="meteors-destroyed"></td>
             <td id="score"></td>
+            <td id="high-score"></td>
           </tr>
         </table>
       </div>
